--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
         height: 48px;
         flex-shrink: 0;
     }
+    
+    /* Selected Server Style Fix */
+    .server-icon.active img, .server-icon.active div {
+        border-radius: 1rem; /* from rounded-full to rounded-2xl */
+        transition: border-radius 0.2s ease-in-out;
+    }
+
 
     .ping-dot {
         position: absolute;
