--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
         flex-shrink: 0;
     }
     
-    /* Selected Server Style Fix */
     .server-icon.active img, .server-icon.active div {
-        border-radius: 0.5rem; /* from rounded-full to rounded-2xl */
-        transition: border-radius 0.2s ease-in-out;
+        border-radius: 0.5rem;
+        transition: border-radius 0.5s ease-in-out;
     }
 
 
