--- a/index.html
+++ b/index.html
@@ -156,6 +156,9 @@
                             </button>
                         </div>
                         <textarea id="message-input" placeholder="メッセージを送信" class="input-field w-full p-3 rounded-md resize-none pr-12 text-[0.95rem] max-h-[40vh]" rows="1"></textarea>
+                        <button id="send-button" class="p-2.5 rounded-full text-[var(--button-text)] bg-[var(--button-bg)] hover:bg-indigo-600 disabled:opacity-50 disabled:cursor-not-allowed transition-colors flex-shrink-0" disabled>
+                        <svg class="w-5 h-5 ml-0.5" fill="currentColor" viewBox="0 0 24 24"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
+                    </button>
                     </div>
                 </div>
             </div>
